appId: com.mentra.mentra
---
- assertVisible: Leave the call
- tapOn: View participants
- assertVisible: Close participants
